exports[`friends reducer contactsLoaded action should import contacts and overwrite existing values 1`] = `
Object {
  "1": Object {
    "familyName": "Copernicus",
    "givenName": "Nicolaus",
    "phoneNumber": "800-555-1212",
    "recordID": 1,
  },
  "10": Object {
    "familyName": "Hubble",
    "givenName": "Edwin",
    "recordID": 10,
  },
  "11": Object {
    "familyName": "Rubin",
    "givenName": "Vera",
    "recordID": 11,
  },
  "12": Object {
    "familyName": "Kepler",
    "givenName": "Johannes",
    "recordID": 12,
  },
  "13": Object {
    "familyName": "Humason",
    "givenName": "Milton",
    "middleName": "L.",
    "recordID": 13,
  },
  "14": Object {
    "familyName": "Oort",
    "givenName": "Jan",
    "recordID": 14,
  },
  "15": Object {
    "familyName": "Klumpke",
    "givenName": "Dorothea",
    "recordID": 15,
  },
  "16": Object {
    "familyName": "Struve",
    "givenName": "Gustav Wilhelm Ludvig",
    "recordID": 16,
  },
  "17": Object {
    "familyName": "Wolf",
    "givenName": "Max",
    "recordID": 17,
  },
  "2": Object {
    "familyName": "Brahe",
    "givenName": "Tycho",
    "recordID": 2,
  },
  "3": Object {
    "familyName": "Tombaugh",
    "givenName": "Clyde",
    "recordID": 3,
  },
  "4": Object {
    "familyName": "Herschel",
    "givenName": "William",
    "recordID": 4,
  },
  "5": Object {
    "familyName": "Herschel",
    "givenName": "John",
    "recordID": 5,
  },
  "6": Object {
    "familyName": "Messier",
    "givenName": "Charles",
    "recordID": 6,
  },
  "7": Object {
    "familyName": "Leavitt",
    "givenName": "Henrietta",
    "middleName": "Swan",
    "recordID": 7,
  },
  "8": Object {
    "familyName": "Lalande",
    "givenName": "Jérôme",
    "recordID": 8,
  },
  "9": Object {
    "familyName": "Herzsprung",
    "givenName": "Ejnar",
    "recordID": 9,
  },
  "99": Object {
    "familyName": "Sagan",
    "givenName": "Carl",
    "recordID": 99,
  },
}
`;

exports[`friends reducer toggleActive action should toggle a new friend active and set default 1`] = `
Object {
  "42": Object {
    "isActive": true,
    "name": "Jim",
    "rank": 2,
    "recordID": 42,
  },
  "50": Object {
    "isActive": true,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;

exports[`friends reducer toggleActive action should toggle an existing friend (in)active 1`] = `
Object {
  "50": Object {
    "isActive": false,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;

exports[`friends reducer toggleActive action should toggle an existing friend (in)active 2`] = `
Object {
  "50": Object {
    "isActive": true,
    "name": "Bob",
    "rank": 1,
    "recordID": 50,
  },
}
`;
